src/test/resources/rules/fail/IndentationCheck.java
package rules.fail;

public class IndentationCheck {
    public void method() {
    String hw = "Hello World";
        hw.getBytes();
    }
}
